# Commanda

./: .editorconfig  .gitignore  Cargo.toml  README.md  io.github.idevecore.Commanda.json  meson.build  meson_options.txt  replace_icons.py
data/: io.github.idevecore.Commanda.appdata.xml.in.in  io.github.idevecore.Commanda.desktop.in  io.github.idevecore.Commanda.desktop.in.in  io.github.idevecore.Commanda.gschema.xml  io.github.idevecore.Commanda.gschema.xml.in  io.github.idevecore.Commanda.metainfo.xml.in  io.github.idevecore.Commanda.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.rs  commanda.gresource.xml  config.rs  main.rs  meson.build  window.blp  window.rs  window.ui
src/assets/: style.css
src/components/: mod.rs
src/components/home/: home.blp  home.rs  mod.rs
src/components/location_row/: location_row.blp  location_row.rs  mod.rs
src/components/location_selector/: location_selector.blp  location_selector.rs  mod.rs
src/components/preferences/: mod.rs  preferences.blp  preferences.rs
src/components/shortcuts/: shortcuts.blp
src/server/: mod.rs
src/server/routes/: api.rs  mod.rs  pages.rs  ws.rs
src/services/: mod.rs  mpris.rs  qrcode.rs  user.rs  wallpaper.rs  weather.rs
src/services/qrcode/: mod.rs
src/services/user/: mod.rs  user.rs
src/services/wallpaper/: mod.rs  wallpaper.rs
src/services/weather/: mod.rs  weather.rs
web/: 404.html  index.html
web/css/: styles.css
web/js/: index.js  keyboardShortcutsManager.js  requests.js  utils.js
web/templates/: base.html  index.html
